--- a/LoanApiCommSchool/appsettings.json
+++ b/LoanApiCommSchool/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=COMMProjectDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
