--- a/LoanApiCommSchool/LoanApiCommSchool.csproj
+++ b/LoanApiCommSchool/LoanApiCommSchool.csproj
@@ -13,6 +13,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="7.2.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LoanApiCommSchool.Data\LoanApiCommSchool.Data" />
+  </ItemGroup>
 	
   
 </Project>
