--- a/LoanApiCommSchool/appsettings.json
+++ b/LoanApiCommSchool/appsettings.json
@@ -8,7 +8,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=COMMProjectDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;;Database=COMMProjectDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
