Added Token Generation

--- a/LoanApiCommSchool/appsettings.json
+++ b/LoanApiCommSchool/appsettings.json
@@ -10,5 +10,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;;Database=COMMProjectDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+
+  "JwtSettings": {
+    "Issuer": "LoanApiCommSchool",
+    "Audience": "LoanApiCommSchoolUsers",
+    "Key": "SuperSecureJWTKey@123456789012345!",
+    "ExpiresInMinutes": 60
+  },
   "AllowedHosts": "*"
 }
